keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
