virtual-service-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-dev
  namespace: dev
spec:
    hosts:
    - dev.example.com
    gateways:
    - dev-gateway
    http:
    - match:
        - uri:
            prefix: /
      route:
      - destination:
          host: nginx-service
          port:
            number: 80
          subset: v1
        weight: 80
      - destination:
          host: nginx-service
          port:
            number: 80
          subset: v2
        weight: 20
